--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,24 +1,22 @@
-{
-  "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#dd894d",
-    "activityBar.activeBorder": "#aff0ca",
-    "activityBar.background": "#dd894d",
-    "activityBar.foreground": "#15202b",
-    "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#aff0ca",
-    "activityBarBadge.foreground": "#15202b",
-    "editorGroup.border": "#dd894d",
-    "panel.border": "#dd894d",
-    "sideBar.border": "#dd894d",
-    "statusBar.background": "#cf6d28",
-    "statusBar.border": "#cf6d28",
-    "statusBar.foreground": "#15202b",
-    "statusBarItem.hoverBackground": "#a45620",
-    "titleBar.activeBackground": "#cf6d28",
-    "titleBar.activeForeground": "#15202b",
-    "titleBar.border": "#cf6d28",
-    "titleBar.inactiveBackground": "#cf6d2899",
-    "titleBar.inactiveForeground": "#15202b99"
-  },
-  "peacock.color": "#cf6d28"
-}
+"workbench.colorCustomizations": {
+  "activityBar.activeBackground": "#afa9a4",
+  "activityBar.activeBorder": "#aff0ca",
+  "activityBar.background": "#afa9a4",
+  "activityBar.foreground": "#15202b",
+  "activityBar.inactiveForeground": "#15202b99",
+  "activityBarBadge.background": "#aff0ca",
+  "activityBarBadge.foreground": "#15202b",
+  "editorGroup.border": "#afa9a4",
+  "panel.border": "#afa9a4",
+  "sideBar.border": "#afa9a4",
+  "statusBar.background": "#afa9a4",
+  "statusBar.border": "#afa9a4",
+  "statusBar.foreground": "#15202b",
+  "statusBarItem.hoverBackground": "#afa9a4",
+  "titleBar.activeBackground": "#afa9a4",
+  "titleBar.activeForeground": "#15202b",
+  "titleBar.border": "#afa9a4",
+  "titleBar.inactiveBackground": "#afa9a4",
+  "titleBar.inactiveForeground": "#15202b99"
+},
+"peacock.color": "#cf6d28"
